Bug 410118 - The list of search results doesn't get the focus
Summary: The list of search results doesn't get the focus
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: search (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-22 21:15 UTC by Toni Asensi Esteve
Modified: 2019-08-01 06:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This is a screenshot of what happened before the bug started to show its effects. (27.09 KB, image/png)
2019-07-22 21:21 UTC, Toni Asensi Esteve
Details
This is a screenshot of what happens after the bug started to show its effects (the focus is no longer in the right place) (28.58 KB, image/png)
2019-07-22 21:22 UTC, Toni Asensi Esteve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Toni Asensi Esteve 2019-07-22 21:15:56 UTC
SUMMARY
Previously, user could press Ctrl+S to search, type his search criteria, press Enter, use arrow keys and e.g. F3.

Now, after pressing Enter, user has also to take a hand out of the keyboard, look for a mouse or touchpad or similar, point and click, etc.

Less importantly: If the user presses e.g. the / key, then Krusader visually warns the user that there is nothing that has a name that begins with a "/", and the user gets puzzled. This didn't happen before the bug started, then the user could search by name just by typing.

STEPS TO REPRODUCE
1. Use e.g. Ctrl+S to start searching. Press Intro.
2. See the list of search results.

OBSERVED RESULT
You can not use the arrow keys, F3, F4, etc. without taking a hand out of the keyboard, look for a mouse or touchpad or similar, point and click, etc.

EXPECTED RESULT
Previously, you were immediately able to use the arrow keys, F3, F4, etc.

SOFTWARE/OS VERSIONS
Linux: Kubuntu 18.04
KDE Plasma Version: 5.12.8
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5
Comment 1 Toni Asensi Esteve 2019-07-22 21:21:43 UTC
Created attachment 121680 [details]
This is a screenshot of what happened before the bug started to show its effects.
Comment 2 Toni Asensi Esteve 2019-07-22 21:22:43 UTC
Created attachment 121682 [details]
This is a screenshot of what happens after the bug started to show its effects (the focus is no longer in the right place)
Comment 3 Toni Asensi Esteve 2019-07-22 22:51:49 UTC
If it can help: the bug effects were seen after the commit 2fbd49f01a898dd1d711658e3e33596a7852d143 , maybe seeing its changes (https://cgit.kde.org/krusader.git/commit/?id=2fbd49f01a898dd1d711658e3e33596a7852d143) gives a clue.
Comment 4 Toni Asensi Esteve 2019-07-23 06:41:56 UTC
There's a proposed solution in https://phabricator.kde.org/D22673
Comment 5 Toni Asensi Esteve 2019-08-01 05:56:33 UTC
Git commit a4ad17bab0bec495609d37145af4f007c31bd87e by Toni Asensi Esteve.
Committed on 01/08/2019 at 05:55.
Pushed by asensi into branch 'master'.

Set the focus on the first search result

FIXED: [ 410118 ] The list of search results doesn't get the focus

Differential Revision: https://phabricator.kde.org/D22673

M  +4    -0    krusader/Search/krsearchdialog.cpp

https://commits.kde.org/krusader/a4ad17bab0bec495609d37145af4f007c31bd87e
Comment 6 Toni Asensi Esteve 2019-08-01 06:01:38 UTC
Git commit c6e33258099bec71ebb2ec4e47abd048330fa82d by Toni Asensi Esteve.
Committed on 01/08/2019 at 06:01.
Pushed by asensi into branch 'stable'.

Set the focus on the first search result

FIXED: [ 410118 ] The list of search results doesn't get the focus

Differential Revision: https://phabricator.kde.org/D22673

(cherry picked from commit a4ad17bab0bec495609d37145af4f007c31bd87e)

M  +4    -0    krusader/Search/krsearchdialog.cpp

https://commits.kde.org/krusader/c6e33258099bec71ebb2ec4e47abd048330fa82d