Set the focus on the first search result

FIXED: [ 410118 ] The list of search results doesn't get the focus
BUG: 410118

Differential Revision: https://phabricator.kde.org/D22673